--- a/client/src/features/menu/EventListMenu.module.scss
+++ b/client/src/features/menu/EventListMenu.module.scss
@@ -2,4 +2,5 @@
   align-content: center;
   justify-content: space-between;
   gap: 8px;
+  padding-top: 24px;
 }
